--- a/index.html
+++ b/index.html
@@ -4,48 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ТЭР</title>
-</head>
+    <title>ТЭР СШ 41</title>
+   </head>
 <body>
-    <style>
-        body {
-            background-color: oldlace;
-        }
-    </style>
+    <div class="b">
+<div> 
+    <h2>Потребление</h2>
     <table>
-        <tr><th>месяц</th><th>Электричество, кВт</th><th>Тепло, Гкал</th><th>Вода, м3</th></tr>
-        <tr><td class="a">январь 2022</td><td>59&nbsp059</td><td>196</td><td>1&nbsp052</td></tr>
-        <tr><td class="a">январь 2021</td><td>58&nbsp254</td><td>294</td><td>1&nbsp091</td></tr>
-        <tr><td class="a">февраль 2022</td><td></td><td></td><td></td></tr>
-        <tr><td class="a">февраль 2021</td><td></td><td></td><td></td></tr>
-        <tr><td class="a">март 2022</td><td></td><td></td><td></td></tr>
-        <tr><td class="a">март 2021</td><td></td><td></td><td></td></tr>
-    </table>
+    <tr><th>месяц</th><th>Электричество, кВт</th><th>Тепло, Гкал</th><th>Вода, м3</th></tr>
+    <tr><td class="a">январь 2022</td><td>59&nbsp059</td><td>196</td><td>1&nbsp052</td></tr>
+    <tr><td class="a">январь 2021</td><td>58&nbsp254</td><td>294</td><td>1&nbsp091</td></tr>
+    <tr><td class="a">февраль 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">февраль 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">март 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">март 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">апрель 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">апрель 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">май 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">май 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">июнь 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">июнь 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">июль 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">июль 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">август 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">август 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">сентябрь 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">сентябрь 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">октябрь 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">октябрь 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">ноябрь 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">ноябрь 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">декабрь 2022</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">декабрь 2021</td><td></td><td></td><td></td></tr>
+</table>
+</div>
+<div>
+    <h2>Экономия-/перерасход+</h2>
+     <table>
+    <tr><th>месяц</th><th>Электричество, кВт/руб.</th><th>Тепло, Гкал/руб.</th><th>Вода, м3/руб.</th></tr>
+    <tr><td class="a">январь</td><td>+805=257,6 р.</td><td>-98=12&nbsp087 р.</td><td>-39=39 р.</td></tr>
+    <tr><td class="a">февраль</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">март</td><td></td><td></td><td></td></tr>  
+    <tr><td class="a">апрель</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">май</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">июнь</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">июль</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">авгутс</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">сентябрь</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">октябрь</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">ноябрь</td><td></td><td></td><td></td></tr> 
+    <tr><td class="a">декабрь</td><td></td><td></td><td></td></tr> 
+</table></div>
+<div>
+    <h2>Годовое потребление</h2>
+     <table>
+    <tr><th>год</th><th>Электричество, кВт</th><th>Тепло, Гкал</th><th>Вода, м3</th></tr>
+    <tr><td class="a">2021</td><td>598&nbsp817</td><td>1&nbsp511,1801</td><td>11&nbsp552</td></tr>
+    <tr><td class="a">2020</td><td>602&nbsp873</td><td>1&nbsp552,5800</td><td>9&nbsp815</td></tr>
+</table></div>
+    </div>
     <style>
-        table {
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size: 14px;
-            background: white;
-            max-width: 70%;
-            border-collapse: collapse;
-            text-align: center;
-        }
-        th {
-            font-weight: normal;
-            color: #039;
-            border-bottom: 2px solid #6678b1;
-            padding: 10px 8px;
-        }
-        td {
-            color: #669;
-            padding: 9px 8px;
-            border-bottom: 1px solid #6678b1;
-        }
-       tr:hover td {background: rgb(126, 180, 184);}
-       .a {
-           text-align: left;
-       }
+        .b div { 
+    float: left;
+    box-sizing: border-box;
+    max-width: 800px;
+    margin: 10px;
+   }
+table {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    background: white;
+    max-width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+    border: 2px solid rgb(42, 49, 150)
+}
+th {
+    font-weight: normal;
+    color: #039;
+    border-bottom: 2px solid #6678b1;
+    padding: 10px 8px;
+    border: 2px solid rgb(42, 49, 150)
+}
+td {
+    color: #669;
+    padding: 9px 8px;
+    border: 2px solid rgb(42, 49, 150) ;
+}
+tr:hover td {background: rgb(126, 180, 184);}
+.a {
+   text-align: left;
+}
+h2 {
+    text-align: center;
+    color: rgb(42, 49, 150);
+}
     </style>
-        <h3> <a href="index-1.html" target="_blank">Экономия-/перерасход+</a> </h3>
-</body>
+   </body>
 </html>
