--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <tr><td class="a">январь 2022</td><td>59&nbsp059</td><td>196</td><td>1&nbsp052</td></tr>
     <tr><td class="a">январь 2021</td><td>58&nbsp254</td><td>294</td><td>1&nbsp091</td></tr>
     <tr><td class="a">февраль 2022</td><td></td><td></td><td></td></tr>
-    <tr><td class="a">февраль 2021</td><td></td><td></td><td></td></tr>
+    <tr><td class="a">февраль 2021</td><td>54&nbsp686</td><td>290</td><td>1&nbsp231</td></tr>
     <tr><td class="a">март 2022</td><td></td><td></td><td></td></tr>
     <tr><td class="a">март 2021</td><td></td><td></td><td></td></tr>
     <tr><td class="a">апрель 2022</td><td></td><td></td><td></td></tr>
